fix jumbotron cutting off and blog posts getting cut off

--- a/src/css/partials/_homepage.scss
+++ b/src/css/partials/_homepage.scss
@@ -2682,7 +2682,7 @@ footer .footer-links-social li a.icon-iso_logo {
   }
 
   .home-page .homePageGrid .page-grid__content {
-    max-height: 750px;
+    
   }
 }
 @media screen and (max-width: 380px) {
